# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
gendiff/: __init__.py  cli.py  cmd.py  file.py  formatter.py  generate_diff.py  main.py  models.py  parse.py  parser.py  states.py  types.py  utils.py
gendiff/formatters/: json.py  plain.py  stylish.py  utils.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: complex1.json  complex1.yaml  complex2.json  complex2.yaml  complex_json_result  complex_plain_result  complex_stylish_result  simple_json_result
